--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Demo
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/DoctorYa
+spring.datasource.username=doctorUser
+spring.datasource.password=123doctorya
+spring.jpa.hibernate.ddl-auto=update
