--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-version: '3.8'
-
+version: "3.8"
 services:
   database:
     image: mysql:8.0
@@ -15,25 +14,11 @@ services:
       - db_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
-      - spring_network
-
-  app:
-    image: doctorya_app:latest
-    container_name: doctorya-app
-    depends_on:
-      - database
-    ports:
-      - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/DoctorYa
-      SPRING_DATASOURCE_USERNAME: doctorUser
-      SPRING_DATASOURCE_PASSWORD: 123doctorya
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-    networks:
-      - spring_network
+      - doctorya_network
 
 volumes:
   db_data:
 
 networks:
-  spring_network:
+  doctorya_network:
+    driver: bridge
